inclusao da pagina de eventos com o layout definido

--- a/event_wireframe.html
+++ b/event_wireframe.html
@@ -10,11 +10,12 @@
 
 <body>
     <!--menu-->
-    <div class="containerfluid bg-dark" style="height: 50px">
-        <div class="row">
-
-
-        </div>
+    <div class="nav-wrapper" id="nav-wrapper">
+        <div class="navbar" id="navbar">
+            <a class="nav-item-logo" href="/">
+                <img class="logo"
+                    src="/app/assets/images/Empreende1@2x.png" style="width: 60px;">
+            </a> </div>
     </div>
 
 
@@ -35,7 +36,7 @@
     </div>
 
     <!--SEÇÃO: sobre-->
-    <div class="containerfluid py-5 bg-secondary">
+    <div class="containerfluid py-5 bg-secondary" id="evento">
         <div class="row">
             <div class="col-1 p-2"></div>
             <div class="col-10">
